# cwl

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/aws/: client.rs
src/commands/: groups.rs  mod.rs  query.rs  tail.rs
src/config/: mod.rs
src/utils/: format.rs  json_formatter.rs  mod.rs  time.rs
