[package]
name = "cwl"
version = "0.1.0"
edition = "2021"
authors = ["CloudWatch Logs CLI Contributors"]
description = "A powerful CLI tool for interacting with AWS CloudWatch Logs"
license = "MIT"

[dependencies]
aws-config = "1.5"
aws-sdk-cloudwatchlogs = "1.51"
tokio = { version = "1.41", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
chrono = "0.4"
regex = "1.11"
indicatif = "0.17"
anyhow = "1.0"
futures = "0.3"
toml = "0.8"
ctrlc = "3.4"
